# IshifukuScraping

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_COMPLETE.md  README_v2.md  debug_extractor.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  scrape_ishifuku.py
.github/instructions/: ishifuku.instructions.md
.github/workflows/: ci-cd.yml  ci.yml  release.yml
docs/: ARCHITECTURE_v2.md  MYPY_ERROR_RESOLUTION_PLAN.md
docs/issue/: improvement-plan-20250821.md  リファクタリングテンプレート.md
docs/issue/20250821/: 20250821-001.md  refactoring-plan-20250821-001.md
docs/issue/20250904/: 20250904_001.md  20250904_tasklist.md  price画面サンプル.html
docs/issue/20250905/: 20250905_001.md  20250905_task_list.md
lambda/: README.md  deploy.sh  lambda_scrape_ishifuku.py  requirements.txt  sam_deploy.sh  serverless.yml  template.yaml  test_lambda.py  test_lambda_improved.py
lambda/.aws-sam/: build.toml
security-reports/: bandit-report.json
src/: .samignore  main_lambda.py  main_local.py  requirements.txt
src/ishifuku/: __init__.py  config.py  core.py  models.py  optimized_core.py
src/ishifuku/scraping/: __init__.py  driver.py  extractor.py  parser.py
src/ishifuku/storage/: __init__.py  csv_handler.py  s3_handler.py
src/ishifuku/utils/: __init__.py  datetime_utils.py  logging_utils.py
test-results-3.10/: pytest-report.html  pytest-results.xml
test-results-3.11/: pytest-report.html  pytest-results.xml
test-results-3.12/: pytest-report.html  pytest-results.xml
test-results-3.13/: pytest-report.html  pytest-results.xml
test-results-3.9/: pytest-report.html  pytest-results.xml
tests/: test_config.py  test_core.py  test_csv_handler.py  test_datetime_utils.py  test_driver.py  test_extractor.py  test_extractor_advanced.py  test_extractor_coverage.py  test_extractor_final.py  test_main_lambda.py  test_main_local.py  test_multi_products.py  test_optimized_core.py  test_parser.py  test_s3_storage.py  test_scrape_ishifuku.py  test_scraping_functions.py  test_storage.py  test_utils.py
